added rest of images to side bar on demo page

--- a/source/default/_patterns/02-molecules/side-bar-img-card/_side-bar-img-card.twig
+++ b/source/default/_patterns/02-molecules/side-bar-img-card/_side-bar-img-card.twig
@@ -17,7 +17,7 @@
           <a class="side-bar-img-card__image-link" href="#">
             {% include '@atoms/image/_image.twig' with {
               imageStyleName: 'thumbnail',
-              img: card_image,
+              img: side_bar_img_card.img,
               class: "side-bar-img-card__img"
             } %}
           </a>
