--- a/source/default/_patterns/05-pages/intro-page/_intro-page.twig
+++ b/source/default/_patterns/05-pages/intro-page/_intro-page.twig
@@ -27,5 +27,8 @@
     main_article: intro_page.main_article2,
   } %}
 
+  {% include '@organisms/_sidebar.twig' with {
+    sidebar: intro_page.sidebar,
+  } %}
 {% endblock content %}
 
