--- a/source/default/_patterns/03-organisms/footer/_footer.twig
+++ b/source/default/_patterns/03-organisms/footer/_footer.twig
@@ -9,44 +9,46 @@
  */
 #}
 
-<footer class="footer container">
-  <div class="row text-center">
-    <div class="col">
-      {{ footer.headline }} <strong> {{ footer.emphasis }}</strong>
-    </div>
-  </div>
+<footer class="footer">
+  <div class="footer__container container">
 
-
-
-  <div class="row">
-    <div class="col-sm-6">
-      <form class="footer__form">
-        <div class="form-row">
-          <div class="col">
-            <input type="text" class="form-control" placeholder="{{ footer.form.name }}">
-          </div>
-          <div class="col">
-            <input type="text" class="form-control" placeholder="{{ footer.form.email }}">
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label for="messageTextArea">{{ footer.form.message }}</label>
-          <textarea class="form-control" id="messageTextArea" rows="5"></textarea>
-        </div>
-
-        {% include '@atoms/_icon-button.twig' with {
-          icon_button: footer.button
-        } %}
-      </form>
+    <div class="row text-center">
+      <div class="col">
+        <h2 class="footer__heading">
+          {{ footer.headline }} <strong> {{ footer.emphasis }}</strong>
+        </h2>
+      </div>
     </div>
 
-    <div class="col-sm-6">
-      <p>{{ footer.summary }} </p>
 
-      {% for link in footer.links %}
+    <div class="row">
+      <div class="col-sm-6">
+        <form class="footer__form">
+          <div class="form-row">
+            <div class="col">
+              <input type="text" class="footer__form--name-input form-control" placeholder="{{ footer.form.name }}">
+            </div>
+            <div class="col">
+              <input type="text" class="footer__form--email-input form-control" placeholder="{{ footer.form.email }}">
+            </div>
+          </div>
 
-        <span class="header__btn-wrapper">
+          <div class="form-group">
+            <textarea class="footer__form--message-input form-control" id="messageTextArea" rows="5" placeholder="{{ footer.form.message }}"></textarea>
+          </div>
+
+          {% include '@atoms/_icon-button.twig' with {
+            icon_button: footer.button
+          } %}
+        </form>
+      </div>
+
+      <div class="footer__summary col-sm-6">
+        <p class="footer__summary--paragraph">{{ footer.summary }} </p>
+
+        {% for link in footer.links %}
+
+          <span class="header__btn-wrapper">
           <button type="button" class="header__btn btn btn-dark">
           <i class="header__svg fa{{ link.icon_type }} fa-{{ link.icon }}" aria-hidden="true"></i>
         </button>
@@ -54,18 +56,21 @@
          {{ link.text }}
        </span>
         </span>
-      {% endfor %}
+        {% endfor %}
 
+      </div>
     </div>
+
+
+    <hr>
+
+    <ul class="footer__credits--list d-flex">
+      {% for credit in footer.credits %}
+        <li class="footer--credit--item">
+          {{ credit.credit }}
+        </li>
+      {% endfor %}
+    </ul>
+
   </div>
-
-
-  <hr>
-  <ul>
-    {% for credit in footer.credits  %}
-      <li>
-        {{  credit.credit }}
-      </li>
-    {% endfor %}
-  </ul>
 </footer>
