--- a/source/default/_patterns/03-organisms/footer/_footer.twig
+++ b/source/default/_patterns/03-organisms/footer/_footer.twig
@@ -34,7 +34,8 @@
           </div>
 
           <div class="form-group">
-            <textarea class="footer__form--message-input form-control" id="messageTextArea" rows="5" placeholder="{{ footer.form.message }}"></textarea>
+            <textarea class="footer__form--message-input form-control" id="messageTextArea" rows="5"
+                      placeholder="{{ footer.form.message }}"></textarea>
           </div>
 
           {% include '@atoms/_icon-button.twig' with {
@@ -46,23 +47,29 @@
       <div class="footer__summary col-sm-6">
         <p class="footer__summary--paragraph">{{ footer.summary }} </p>
 
-        {% for link in footer.links %}
+        <div class="footer--summary--social-links d-flex">
 
-          <span class="header__btn-wrapper">
-          <button type="button" class="header__btn btn btn-dark">
-          <i class="header__svg fa{{ link.icon_type }} fa-{{ link.icon }}" aria-hidden="true"></i>
-        </button>
-       <span class="header__btn-text">
-         {{ link.text }}
-       </span>
-        </span>
-        {% endfor %}
+          {% for link in footer.links %}
+
+            <div class="footer__btn-wrapper">
+              <button type="button" class="footer__btn btn btn-dark">
+                <i class="footer__svg fa{{ link.icon_type }} fa-{{ link.icon }}" aria-hidden="true"></i>
+              </button>
+              <span class="footer__btn-text">
+                {{ link.text }}
+              </span>
+            </div>
+          {% endfor %}
+
+
+        </div>
+
+
+
+
 
       </div>
     </div>
-
-
-    <hr>
 
     <ul class="footer__credits--list d-flex">
       {% for credit in footer.credits %}
