--- a/source/default/_patterns/03-organisms/footer/_footer.twig
+++ b/source/default/_patterns/03-organisms/footer/_footer.twig
@@ -22,7 +22,7 @@
 
 
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col col-lg-6">
         <form class="footer__form">
           <div class="form-row">
             <div class="col">
@@ -44,7 +44,7 @@
         </form>
       </div>
 
-      <div class="footer__summary col-sm-6">
+      <div class="footer__summary col-lg-6">
         <p class="footer__summary--paragraph">{{ footer.summary }} </p>
 
         <div class="footer--summary--social-links d-flex">
