--- a/source/default/_patterns/03-organisms/footer/_footer.scss
+++ b/source/default/_patterns/03-organisms/footer/_footer.scss
@@ -3,28 +3,22 @@
 //   webpack.particle.js: sass-loader.data|includePaths
 .footer {
   background-color: $c-lightest;
-  padding-top: 104px;
-  padding-bottom: 140px;
-  border-top: $c-gray 2px solid;
+  padding-top: ($spacing-xxl*2);
+  padding-bottom: ($spacing--xl*3);
+  @include div-border-top();
 }
 
 .footer__heading {
-  //@include section_heading();
-  font-family: $ff--sourcesans;
-  color: $c-dark;
-  font-size: 29px;
-  letter-spacing: 4px;
-  line-height: 50px;
-  font-weight: 400;
-  text-transform: uppercase;
-  margin-bottom: 43px;
+  @include footer_heading();
 }
 
 .footer__summary {
-  padding-left: 50px;
+  @include media-breakpoint-up(lg) {
+    padding-left: 50px;
+  }
 }
 
-.footer__summary--paragraph {
+.footer__summary--paragra ph {
   font-size: 17px;
   font-family: $ff--sourcesans;
   color: $c-dark;
@@ -63,9 +57,11 @@
 
 .footer--summary--social-links {
   flex-direction: column;
-  flex-wrap: wrap;
-  max-height: 350px;
   display: inline-flex;
+  @include media-breakpoint-up(sm) {
+    flex-wrap: wrap;
+    max-height: 330px;
+  }
 }
 
 .footer__btn-wrapper {
