WIP refacotring basic page to be drier

--- a/source/default/_patterns/00-protons/non-printing/_colors.scss
+++ b/source/default/_patterns/00-protons/non-printing/_colors.scss
@@ -6,6 +6,7 @@ $c-lightest: #f0f0f0;
 $c-light: #e5e5e5;
 $c-gray: #d0d0d0;
 $c-dark: #878787;
+$c-darkest: #3c3c3c;
 
 //Colors
 $c-primary: #ed786a;
