--- a/source/default/_patterns/03-organisms/header/_header.twig
+++ b/source/default/_patterns/03-organisms/header/_header.twig
@@ -11,7 +11,7 @@
 
 <div class="header container">
   <div class="row">
-    <div class="header__navbar col text-center">
+    <div class="header__navbar col">
       {% for nav in header.navbar %}
 
         <span class="header__btn-wrapper">
