--- a/source/default/_patterns/03-organisms/footer/_footer.twig
+++ b/source/default/_patterns/03-organisms/footer/_footer.twig
@@ -51,7 +51,7 @@
 
           {% for link in footer.links %}
 
-            <div class="footer__btn-wrapper">
+            <div class="footer__btn-wrapper d-flex">
               <button type="button" class="footer__btn btn btn-dark">
                 <i class="footer__svg fa{{ link.icon_type }} fa-{{ link.icon }}" aria-hidden="true"></i>
               </button>
