--- a/source/default/_patterns/05-pages/full-page-sidebar/_full-page-sidebar.twig
+++ b/source/default/_patterns/05-pages/full-page-sidebar/_full-page-sidebar.twig
@@ -9,6 +9,9 @@
  */
 #}
 
-<div class="full-page-sidebar">
-  <h1>full-page-sidebar component</h1>
-</div>
+{% extends '@templates/_basic-page.twig' %}
+
+{% block content %}
+{% endblock content %}
+
+
