--- a/source/default/_patterns/02-molecules/side-bar-card/_side-bar-card.scss
+++ b/source/default/_patterns/02-molecules/side-bar-card/_side-bar-card.scss
@@ -4,6 +4,10 @@
 // are provided to this file via:
 //   webpack.particle.js: sass-loader.data|includePaths
 
+.side-bar-card {
+  @include div-border-bottom();
+}
+
 .side-bar-card__btn {
   @include date-btn();
   margin-top: $spacing-xxl;
