--- a/source/default/_patterns/02-molecules/side-bar-card/_side-bar-card.twig
+++ b/source/default/_patterns/02-molecules/side-bar-card/_side-bar-card.twig
@@ -9,9 +9,9 @@
  */
 #}
 
-<div class="side-bar-card container">
-  <div class="row">
-    <div class="col-sm-4">
+<div class="side-bar-card">
+  {#<div class="row">#}
+    {#<div class="col-sm-4">#}
       <button type="button" class="side-bar-card__btn btn btn-dark">
         {{ side_bar_card.date }}
       </button>
@@ -22,8 +22,8 @@
         <p class="side-bar-card_summary">{{ side_bar_card.summary }}</p>
       </div>
 
-    </div>
+    {#</div>#}
 
-  </div>
+  {#</div>#}
 
 </div>
