--- a/source/default/_patterns/03-organisms/sidebar/_sidebar.scss
+++ b/source/default/_patterns/03-organisms/sidebar/_sidebar.scss
@@ -4,5 +4,6 @@
 // are provided to this file via:
 //   webpack.particle.js: sass-loader.data|includePaths
 
-.sidebar {
+.sidebar__date-cards {
+  margin-bottom: $spacing--sm;
 }
