--- a/source/default/_patterns/03-organisms/main-article/_main-article.twig
+++ b/source/default/_patterns/03-organisms/main-article/_main-article.twig
@@ -9,7 +9,7 @@
  */
 #}
 
-<div class="main-article container">
+<div class="main-article container main-article--border-{{ main_article.border }}">
 
   <div class="row">
     <div class="col">
