--- a/source/default/_patterns/03-organisms/featured-article-grid/_featured-article-grid.scss
+++ b/source/default/_patterns/03-organisms/featured-article-grid/_featured-article-grid.scss
@@ -4,6 +4,10 @@
 // are provided to this file via:
 //   webpack.particle.js: sass-loader.data|includePaths
 
+.featured-article-grid {
+  margin-bottom: ($spacing-xxl*2);
+}
+
 .featured-article-grid__headline {
   @include section_heading();
 }
@@ -15,3 +19,4 @@
 .featured-article-grid__btn:hover {
   background-color: $c-secondary;
 }
+
