--- a/source/default/_patterns/02-molecules/featured-article-card/_featured-article-card.scss
+++ b/source/default/_patterns/02-molecules/featured-article-card/_featured-article-card.scss
@@ -4,10 +4,9 @@
 // are provided to this file via:
 //   webpack.particle.js: sass-loader.data|includePaths
 
-//TODO: Add spacing vars
 .featured-article-card__title {
   @include article_heading();
-  margin-top: 70px;
+  margin-top: ($spacing--lg*2);
 }
 
 .featured-article-card__summary {
