--- a/source/default/_patterns/05-pages/intro-page/_intro-page.twig
+++ b/source/default/_patterns/05-pages/intro-page/_intro-page.twig
@@ -19,7 +19,7 @@
     banner: intro_page.banner,
   } %}
 
-
+  {# TODO: refactor to remove div from page? #}
   <div class="container">
     <div class="row">
       <div class="col-8">
@@ -42,4 +42,9 @@
   </div>
 
 {% endblock content %}
+
+{#override footer block example#}
+{#{% block footer %}#}
+  {#<h2> FOOTERS </h2>#}
+{#{% endblock footer %}#}
 
