--- a/source/default/_patterns/01-atoms/icon-button/_icon-button.scss
+++ b/source/default/_patterns/01-atoms/icon-button/_icon-button.scss
@@ -4,6 +4,10 @@
 // are provided to this file via:
 //   webpack.particle.js: sass-loader.data|includePaths
 
+.icon-button {
+  padding-bottom: $spacing--xs;
+}
+
 .icon-button__btn--rectangle {
   @include rectangle-btn();
 }
