--- a/source/default/_patterns/05-pages/intro-page/_intro-page.twig
+++ b/source/default/_patterns/05-pages/intro-page/_intro-page.twig
@@ -20,9 +20,10 @@
   } %}
 
   {# TODO: refactor to remove div from page? #}
+
   <div class="container">
     <div class="row">
-      <div class="col-8">
+      <div class="col-sm-12 col-md-8">
         {% include '@organisms/_main-article.twig' with {
           main_article: intro_page.main_article1,
         } %}
@@ -32,7 +33,7 @@
         } %}
       </div>
 
-      <div class="col-4">
+      <div class="col-sm-12 col-md-4">
         {% include '@organisms/_sidebar.twig' with {
           sidebar: intro_page.sidebar,
         } %}
