--- a/source/default/_patterns/05-pages/full-page-sidebar/_full-page-sidebar.twig
+++ b/source/default/_patterns/05-pages/full-page-sidebar/_full-page-sidebar.twig
@@ -15,13 +15,13 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-4">
+      <div class="col-sm-12 col-md-4">
         {% include '@organisms/_sidebar.twig' with {
           sidebar: full_page_sidebar.sidebar,
         } %}
       </div>
 
-      <div class="col-8">
+      <div class="col-sm-12 col-md-8">
         {% include '@organisms/_main-article.twig' with {
           main_article: full_page_sidebar.main_article,
         } %}
